Fixes invalid long address mappings in NWK layer
This issue was migrated from bug 5456 in our old bug tracker.
Original bug information:
Reporter: Fred Fierling
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.5.x (Experimental)
Attachments:
undecodedPacket94.pcap: Test capture with undecoded payload in packet 94
wireshark-bug-5456-fix.patch: Patch to fix invalid extended address mapping.