From Fred Fierling: Fixes invalid long address mappings in NWK layer. https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=5456

svn path=/trunk/; revision=35106